# rust-system-cache-cleaner

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  appveyor.yml  install.bat
ci/: .directory  before_deploy.ps1  before_deploy.sh  script.sh
research/: Notes  bleach_bit_output  bleach_bit_output_mod  cool-ascii-art  defualt  discription  windows-env
resources/: example.crawler  example.xml
resources/config/: cache_cleaner.service
resources/crawlers/: Google Chrome.xml  Internet Explorer.xml  adobe_reader.xml  amsn.xml  apt.xml  audacious.xml  bash.crawler  bash.xml  chromium.xml  elinks.xml  eopkg.xml  epiphany.xml  evolution.xml  filezilla.xml  flash.xml  gedit.crawler  gedit.xml  gimp.crawler  gimp.xml  ie.crawler  java.xml  libreoffice.xml  sqllite3.xml
src/: cleaner.rs  conf.rs  conf_parser.rs  crawl.rs  crawler_parser.rs  main.rs  users.rs  utils.rs  xml_parser.rs
src/config/: cache_cleaner.conf  cache_cleaner_empty.conf  clear_cache.conf  user_dir.conf  user_file.conf
